--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^3.0.1
   otp_text_field: ^1.1.3
   dio: ^4.0.6
+  shared_preferences: ^2.0.15
   
 
 dev_dependencies:
